Whitespace fixes

--- a/couchpotato/static/style/main.scss
+++ b/couchpotato/static/style/main.scss
@@ -27,7 +27,6 @@ body {
 }
 
 a {
-	display: inline-block;
 	position: relative;
 	overflow: hidden;
 	text-decoration: none;
